feat: improve DisableDamageCommand and add tests
Refactored DisableDamageCommand:
- Correct logger to use DisableDamageCommand.class
- Removed unused field/imports
- Added null-safety for ServiceLocator and entities
- Simplified component lookups and validation
- Added clearer logging of entity count

Added unit tests for DisableDamageCommand to verify:
- Toggling on/off updates only player entities with WeaponsStatsComponent
- Invalid args (empty or nonsense) are rejected
- Handles missing EntityService gracefully

Also fixed minor test issues across command suite (wrong component verifies, etc.).

Signed-off-by: Keys <70819367+keys-i@users.noreply.github.com>